Final Commit to make the changes visible on Github correctly

--- a/india_t20_wc2024_tribute_site/style.css
+++ b/india_t20_wc2024_tribute_site/style.css
@@ -1,157 +1,235 @@
-@import url('https://fonts.googleapis.com/css2?family=Martel+Sans:wght@200;300;400;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-*{
+* {
     margin: 0;
     padding: 0;
-    font-family: "Poppins",sans-serif;
 }
-body{
-    background-color: rgb(21, 2, 39);
+
+header {
+    position: sticky;
+    top: 0;
+    width: max(600px, 100vw);
 }
-header{
-    width: max(800px,100vw);
+
+nav {
+    background-color: brown;
 }
-nav{
+
+nav ul {
+    list-style: none;
     display: flex;
-    justify-content: space-around;
-    align-items: center;
-    color: white;
-    font-weight: 300;
-    padding: 23px 0;
-    background-color: rgb(49, 13, 83);
+    justify-content: center;
+    box-sizing: border-box;
+    padding: 20px;
+    gap: 23px;
+    width: 100vw;
 }
-nav ul{
-    display: flex;
-}
-nav ul li a{
+
+nav ul li a {
     color: white;
     text-decoration-line: none;
 }
-.left{
-    font-size: 1.5rem;
+
+.home h1 {
+    margin: 20px auto;
+    text-align: center;
+    font-size: 32px;
+    box-sizing: border-box;
+    border: 1px solid black;
+    border-radius: 20px;
+    outline: 1px solid black;
+    outline-offset: 3px;
+    padding: 10px;
+    width: 65vw;
 }
-.right ul{
-    display: flex;
-    list-style: none;
-    gap: 34px;
+
+.home p {
+    font-size: 20px;
+    padding: 20px;
 }
-.first{
-    display: flex;
-    justify-content: space-around;
-    margin: 80px 0;
+
+.home .container {
+    padding: 40px;
 }
-.leftsec{
-    width: 30vw;
-    font-size: 3rem;
-    color: white;
-    margin: 80px;
+
+.home .container .images {
+    display: grid;
+    place-items: center;
 }
-.rightsec{
-    width: 30vw;
+
+.home .images img {
+    width: 500px;
+    height: 350px;
+    object-fit: cover;
+    object-position: center;
+    border-radius: 20px;
+    padding: 5px;
+}
+
+.home .container .lastimg {
+    display: grid;
+    place-items: center;
+
+}
+
+.home .container .lastimg img {
+    width: max(600px, 60vw);
+}
+
+.home .container .lastimg p {
+    text-align: center;
+    width: 65vw;
+}
+
+.individuals td {
+    border: 1px solid black;
+    padding: 30px;
+}
+
+.individuals table {
+    border-collapse: collapse;
+    margin: auto;
+    width: 70vw;
+}
+
+.individuals h1 {
+    text-align: center;
+}
+
+.individuals .image {
+    display: grid;
+    place-items: center;
+}
+
+.individuals div img {
+    width: 500px;
+    height: 300px;
+    object-fit: cover;
+}
+
+.individuals table a {
+    color: rgb(58, 4, 139);
+    text-decoration-line: none;
+    border: 1px solid rgb(227, 223, 223);
+    padding: 6px;
+    border-radius: 20px;
+    background-color: rgba(203, 215, 255, 0.818);
+}
+
+.coaches table {
+    border-collapse: collapse;
+    margin: auto;
+    width: 70vw;
+}
+
+.coaches td {
+    border: 1px solid black;
+    padding: 20px;
+}
+
+.coaches h1 {
+    text-align: center;
+}
+
+.coaches .image {
+    display: grid;
+    place-items: center;
+}
+
+.coaches div img {
+    width: 500px;
+    height: 300px;
+    object-fit: cover;
+}
+
+.coaches table a {
+    color: rgb(58, 4, 139);
+    text-decoration-line: none;
+    border: 1px solid rgb(227, 223, 223);
+    padding: 6px;
+    border-radius: 20px;
+    background-color: rgba(203, 215, 255, 0.818);
+}
+
+.fixtures .box1 {
+    margin: 20px 20vw;
+    text-align: center;
+}
+
+.fixtures .box1 h1 {
+    font-size: 32px;
+    border: 1px solid black;
+    outline: 1px solid black;
+    outline-offset: 3px;
+    width: 60vw;
+    border-radius: 20px;
+    padding: 6px;
+    box-sizing: border-box;
+    margin-bottom: 10px;
+}
+
+.fixtures .box1 a img {
+    width: 60vw;
+    border-radius: 10px;
+}
+
+.highlights h1 {
+    text-align: center;
+    padding: 20px;
+}
+
+.highlights iframe {
+    width: 60vw;
+    margin: 10px 20vw;
+}
+
+.highlights h2 {
+    text-align: center;
+    width: 60vw;
+    margin: 0 20vw;
+}
+footer{
+    width: 100vw;
+    position: absolute;
+}
+
+footer .footer-item {
     display: flex;
     justify-content: center;
-    
+    align-items: center;
 }
-.rightsec img{
-    width: 500px;
-    height: 500px;
-    object-fit: contain;
-}
-.name{
-    color: blueviolet;
-}
-#element{
-    color: blueviolet;
-}
-.second{
-   height: 60vh;
 
-}
-.second h2{
-    color: white;
-    font-size: 24px;
-    font-weight: 400;
-    margin:10px 10vw ;
-    padding: 30px 0;
-}
-.second .box{
-    width: 50vw;
-    height: 2px;
-    margin:0 100px ;
-    background-color: white;
-    display: flex;
-}
-.second .verticalline{
-    height: 90px;
-    width: 1px;
-    background-color: white;
-    margin:0 10vw ;
-}
-.image-top{
-    width: 40px;
+footer .footer-item a img {
+    width: 30px;
     height: 30px;
-    object-fit: cover;
-    position: relative;
-    top: -40px;
-    left: -20px;
-}
-.verticaltext{
-    height: 20px;
-    color: white;
-    position: relative;
-    top: 50px;
-    left: -20px;
-}
-.vertical-desc{
-    color: white;
-    position: relative;
-    top: 100px;
-    left: -20px;
-    font-size: 8px;
-    width: 150px;
-}
-.footer{
-    display: flex;
-    padding: 25px 13px;
-    color: white;
-    display: flex;
-    justify-content: space-evenly;
-    font-weight: 200;
-    background-color: rgb(22, 8, 34);
 
 }
-.footer-item{
-    width: 10vw;
-}
-.footer-item ul li{
-    list-style: none;
-    padding: 10px;
+
+footer .footer-item a {
+    font-size: 20px;
+    color: black;
+    text-decoration-line: none;
     display: flex;
+    align-items: center;
+    margin: 10px;
 }
-footer .rights{
-    color: white;
-    text-align: center;
-    font-weight: 100;
-}
-.project{
-    color: white;
-    position: relative;
-    top: 30vh;
-    left: 20vw;
-    width: 200px;
-}
-.project a{
-    display: flex;
-    padding: 10px;
-    gap: 10px;
-}
-html{
-    scroll-behavior: smooth;
-}
-@media screen and (max-width:1200px){
-    .rightsec img{
-        width: 350px;
+
+@media screen and (min-width:1250px) {
+    .individuals .image {
+        display: flex;
+        justify-content: center;
+
     }
-    .leftsec{
-        font-size: 2rem;
+
+    .coaches .image {
+        display: flex;
+        justify-content: center;
+
+    }
+}
+
+@media only screen and (min-width:1100px) {
+    .home .container .images {
+        display: flex;
+        justify-content: center;
+        margin: auto;
     }
 }
